2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wep-key.h
		- (ws_wep_key_new): fill WEP keys from keyring
		- (ws_wep_guess_key_type): new function; guess the WEP key type for a
			given WEP connection's secrets

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (get_default_type_for_security): unencrypted connections shouldn't
			have a wireless-security setting
		- (security_combo_init): don't set the wireless-security setting if
			security isn't specified in the wireless setting
		- (nma_wireless_dialog_get_connection): handle unencrypted connections
			better

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
	  src/gconf-helpers/Makefile.am
		- (nm_gconf_get_keyring_items): new function; pull generic bits out
			of applet_exported_connection_get_secrets() so that the connection
			editor can use them too

	* src/applet-dbus-settings.c
		- (applet_exported_connection_get_secrets): pull keyring-reading stuff
			out into nm_gconf_get_keyring_items() and use that instead

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
		- Add combo for specifying WEP key index

	* src/wireless-security/wireless-security.c
	  src/wireless-security/wireless-security.h
		- (ws_wep_fill_connection): fold into ws-wep-key.c's fill_connection()
			which is now it's only user

	* src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wep-key.h
		- (key_index_combo_changed_cb): new function; save current key to its
			index
		- (destroy): zero out keys
		- (fill_connection): fold in functionality of ws_wep_fill_connection(),
			handle WEP key index too
		- (ws_wep_key_new): select the WEP key index

	* src/wireless-dialog.c
		- (security_combo_init): only get default type for security if security
			is specified

	* src/connection-editor/page-wireless-security.c